...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Add Guest-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="AddGuestView" title="Add Guest" id="BYZ-38-t0r" customClass="RAAddGuestViewController" customModule="WhoIsTheGuest" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                <variation key="widthClass=compact">
                                    <mask key="constraints">
                                        <include reference="nA3-Ut-TCg"/>
                                    </mask>
                                </variation>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wXe-96-Evz">
                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="jbI-RM-47R"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
...
                                    </mask>
                                </variation>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="zrZ-o7-sMn"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IaV-nN-icU">
                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="yj1-g9-553"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
...
                                    </mask>
                                </variation>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="tie-oi-KjV"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bpd-wD-pQk">
                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="N8w-4s-QUY"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="phonePad" enablesReturnKeyAutomatically="YES"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3dU-IA-5Lv">
                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                <color key="backgroundColor" red="0.1176470588" green="0.52941176469999995" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="YkQ-C9-Etf"/>
                                </constraints>
                                <state key="normal" title="Save">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="YkQ-C9-Etf"/>
                                    </mask>
...
            </objects>
            <point key="canvasLocation" x="400" y="41"/>
        </scene>
        <!--Guest List-->
        <scene sceneID="42C-dn-KdW">
            <objects>
                <viewController storyboardIdentifier="ListGuestView" title="Guest List" id="Wxe-BE-f1C" customClass="RAListGuestTableViewController" customModule="WhoIsTheGuest" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="7hN-zk-dfb"/>
                        <viewControllerLayoutGuide type="bottom" id="B69-d8-cIe"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Jq6-hC-hC2">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                <color key="backgroundColor" red="0.98823529409999999" green="0.0" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="ypp-Tk-ddM"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <state key="normal" title="Remove selected">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="ypp-Tk-ddM"/>
                                    </mask>
...
