//
//  ANGlobalConstants.swift
//  Antecipado
//
//  Created by Crmall on 12/18/15.
//  Copyright © 2015 Crmall - Sistema de Informação de Marketing. All rights reserved.
//

import Foundation

struct RAGlobalConstants {
    struct Storyboard {
        static let Main = "Main"

        struct View {

            struct Guest {
                static let Add = "AddGuestView"
                static let List = "ListGuestView"
            }
            
        }
        
    }
}
